<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/launchbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitle="@string/subtitle_content"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/white" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/foxButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:foregroundTint="@color/colorPrimary"
            android:scaleType="center"
            app:backgroundTint="@color/colorPrimary"
            app:borderWidth="0.5dp"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/launchbar"
            app:layout_constraintVertical_bias="0.92"
            app:maxImageSize="36dp" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/launchbar">

            <LinearLayout
                android:id="@+id/classlayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal" />
        </HorizontalScrollView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/sidelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bdar_white"
        android:layout_gravity="start"
        >

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/user_avatar" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/user_nickname"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_avatar" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@color/colorPrimaryDark"
                android:text="TextView"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/user_intro" />

            <TextView
                android:id="@+id/user_intro"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:lineSpacingExtra="10sp"
                android:text="@string/user_intro"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </android.support.constraint.ConstraintLayout>

        <ImageButton
            android:id="@+id/imageView3"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@android:color/white"
            android:elevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            app:srcCompat="@android:drawable/ic_menu_myplaces" />

        <Button
            android:id="@+id/user_info"
            style="?attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:background="#FFFFFF"
            android:elevation="0dp"
            android:gravity="left|center_vertical"
            android:text="@string/menu_person"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <Button
            android:id="@+id/user_gallery"
            style="?attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:background="#FFFFFF"
            android:elevation="0dp"
            android:gravity="left|center_vertical"
            android:text="@string/user_gallery"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="@+id/imageButton" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/white"
            android:backgroundTint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton"
            app:srcCompat="@android:drawable/ic_menu_agenda" />

        <Button
            android:id="@+id/user_calander"
            style="?attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:background="#FFFFFF"
            android:elevation="0dp"
            android:gravity="left|center_vertical"
            android:text="@string/user_canlender"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton2"
            app:layout_constraintTop_toTopOf="@+id/imageButton2" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/white"
            android:backgroundTint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
            app:srcCompat="@android:drawable/ic_menu_send" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/white"
            android:backgroundTint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton3"
            app:srcCompat="@android:drawable/ic_menu_manage" />

        <Button
            android:id="@+id/user_contact"
            style="?attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:background="#FFFFFF"
            android:elevation="0dp"
            android:gravity="left|center_vertical"
            android:text="@string/user_contacts"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton3"
            app:layout_constraintTop_toTopOf="@+id/imageButton3" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/white"
            android:backgroundTint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton3"
            app:srcCompat="@android:drawable/ic_menu_manage" />

        <Button
            android:id="@+id/user_option"
            style="?attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:background="#FFFFFF"
            android:elevation="0dp"
            android:gravity="left|center_vertical"
            android:text="@string/user_option"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton4"
            app:layout_constraintTop_toTopOf="@+id/imageButton4" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/white"
            android:backgroundTint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton5"
            app:srcCompat="@android:drawable/ic_menu_recent_history" />

        <Button
            android:id="@+id/user_quit"
            style="?attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:background="#FFFFFF"
            android:elevation="0dp"
            android:gravity="left|center_vertical"
            android:text="@string/user_quit"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton6"
            app:layout_constraintTop_toTopOf="@+id/imageButton6" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.DrawerLayout>